--- a/item-service/src/main/resources/static/html/items.html
+++ b/item-service/src/main/resources/static/html/items.html
@@ -12,7 +12,9 @@
     <div class="row">
         <div class="col">
             <button class="btn btn-primary float-end"
-                    onclick="location.href='addForm.html'" type="button">상품
+                    onclick="location.href='addForm.html'"
+                    th:onclick="{}"
+                    type="button">상품
                 등록</button>
         </div>
     </div>
